--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="cabeçalho">
       <div class="cabeçalho__container">
         <input type="checkbox" id="menu" class="container__botao" />
-        <label for="menu">
+        <label for="menu" class="container__rotulo">
           <span class="cabeçalho__menu container__imagem"></span>
         </label>
         <ul class="lista-menu">
@@ -54,7 +54,7 @@
 
       <ul class="opções">
         <input type="checkbox" id="opções-menu" class="opções__botão" />
-        <label for="opções-menu">
+        <label for="opções-menu" class="opções__rotulo">
           <li class="opções__item opções__item-categorias">categorias</li>
         </label>
         <ul class="lista-menu">
@@ -91,18 +91,22 @@
             alt="Favoritos"
             class="container__imagem container__imagem-transparente"
         /></a>
-        <a href="#"
+        <a href="#" class="container__link"
           ><img
             src="assets/Compras.svg"
             alt="Carrinho de compras"
             class="container__imagem"
-        /></a>
-        <a href="#"
+          />
+          <p class="link__texto">Minha sacola</p></a
+        >
+        <a href="#" class="container__link"
           ><img
             src="assets/Usuario.svg"
             alt="Meu perfil"
             class="container__imagem"
-        /></a>
+          />
+          <p class="link__texto">Meu perfil</p></a
+        >
       </div>
     </header>
     <main>
@@ -121,61 +125,62 @@
       <section class="carrossel">
         <h2 class="carrossel__titulo">últimos lançamentos</h2>
         <!-- Slider main container -->
-        <div class="swiper">
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <img src="assets/ApacheKafka.svg" alt="" />
+        <div class="container__carrossel">
+          <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="assets/ApacheKafka.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Liderança.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Javascript.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Guia Front-end.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Portugol.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Acessibilidade.svg" alt="" />
+              </div>
+              ...
             </div>
-            <div class="swiper-slide">
-              <img src="assets/Liderança.svg" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/Javascript.svg" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/Guia Front-end.svg" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/Portugol.svg" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/Acessibilidade.svg" alt="" />
-            </div>
-            ...
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-          <div class="card__descrição">
-            <div class="descrição">
-              <h3 class="descrição__titulo">
-                Talvez você também se interesse por...
-              </h3>
-              <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-              <p class="descrição__texto">
-                Construindo uma aplicação integrada com a plataforma do Google.
-              </p>
+          <div class="card">
+            <div class="card__descrição">
+              <div class="descrição">
+                <h3 class="descrição__titulo">
+                  Talvez você também se interesse por...
+                </h3>
+                <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+                <p class="descrição__texto">
+                  Construindo uma aplicação integrada com a plataforma do
+                  Google.
+                </p>
+              </div>
+              <img src="assets/Angular.svg" class="descrição__imagem" />
             </div>
-            <img src="assets/Angular.svg" class="descrição__imagem" />
-          </div>
-
-          <div class="card__botões">
-            <ul class="botões">
-              <li class="botões__item">
-                <img src="assets/Favoritos.svg" />
-              </li>
-              <li class="botões__item">
-                <img src="assets/Compras.svg" />
-              </li>
-            </ul>
-            <a href="#" class="botões__ancora">Saiba mais</a>
+            <div class="card__botões">
+              <ul class="botões">
+                <li class="botões__item">
+                  <img src="assets/Favoritos.svg" />
+                </li>
+                <li class="botões__item">
+                  <img src="assets/Compras.svg" />
+                </li>
+              </ul>
+              <a href="#" class="botões__ancora">Saiba mais</a>
+            </div>
           </div>
         </div>
       </section>
@@ -183,93 +188,97 @@
       <section class="carrosel">
         <h2 class="carrossel__titulo">mais vendidos</h2>
         <!-- Slider main container -->
-        <div class="swiper">
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <img src="assets/ApacheKafka.svg" alt="" />
+        <div class="container__carrossel">
+          <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="assets/ApacheKafka.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Liderança.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Javascript.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Guia Front-end.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Portugol.svg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/Acessibilidade.svg" alt="" />
+              </div>
+              ...
             </div>
-            <div class="swiper-slide">
-              <img src="assets/Liderança.svg" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/Javascript.svg" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/Guia Front-end.svg" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/Portugol.svg" alt="" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/Acessibilidade.svg" alt="" />
-            </div>
-            ...
-          </div>
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-          <div class="card__descrição">
-            <div class="descrição">
-              <img src="assets/Estrelinhas.svg" class="descrição__estrelas" />
-              <h3 class="descrição__titulo">Autora do Mês</h3>
-              <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-              <p class="descrilção__texto">
-                Analista de sistemas e escritora, Juliana é especialista em
-                Front-End.
-              </p>
-            </div>
-            <img src="assets/Escritora.svg" class="descrição__imagem" />
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
 
-          <div class="card__botões">
-            <ul class="botões">
-              <li class="botões__item">
-                <img src="assets/Favoritos.svg" />
-              </li>
-              <li class="botões__item">
-                <img src="assets/Compras.svg" />
-              </li>
-            </ul>
-            <a href="#" class="botões__ancora">Saiba mais</a>
+          <div class="card">
+            <div class="card__descrição">
+              <div class="descrição">
+                <img src="assets/Estrelinhas.svg" class="descrição__estrelas" />
+                <h3 class="descrição__titulo">Autora do Mês</h3>
+                <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+                <p class="descrilção__texto">
+                  Analista de sistemas e escritora, Juliana é especialista em
+                  Front-End.
+                </p>
+              </div>
+              <img src="assets/Escritora.svg" class="descrição__imagem" />
+            </div>
+
+            <div class="card__botões">
+              <ul class="botões">
+                <li class="botões__item">
+                  <img src="assets/Favoritos.svg" />
+                </li>
+                <li class="botões__item">
+                  <img src="assets/Compras.svg" />
+                </li>
+              </ul>
+              <a href="#" class="botões__ancora">Saiba mais</a>
+            </div>
           </div>
         </div>
       </section>
 
       <section class="tópicos">
-        <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
-        <ul class="tópicos__lista">
-          <li class="tópicos__item">
-            <a href="#" class="tópicos__link">Android</a>
-          </li>
-          <li class="tópicos__item">
-            <a href="#" class="tópicos__link">Marketing Digital</a>
-          </li>
-          <li class="tópicos__item">
-            <a href="#" class="tópicos__link">Agile</a>
-          </li>
-          <li class="tópicos__item">
-            <a href="#" class="tópicos__link">Startups</a>
-          </li>
-          <li class="tópicos__item">
-            <a href="#" class="tópicos__link">HTML & CSS</a>
-          </li>
-          <li class="tópicos__item">
-            <a href="#" class="tópicos__link">Python</a>
-          </li>
-          <li class="tópicos__item">
-            <a href="#" class="tópicos__link">OO</a>
-          </li>
-          <li class="tópicos__item">
-            <a href="#" class="tópicos__link">Java</a>
-          </li>
-        </ul>
+        <div class="tópicos__container">
+          <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+          <ul class="tópicos__lista">
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Android</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Marketing Digital</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Agile</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Startups</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">HTML & CSS</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Python</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">OO</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Java</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="contato">
@@ -286,109 +295,112 @@
         />
       </section>
     </main>
-    
+
     <hr />
 
     <footer class="rodapé">
       <h2 class="rodapé__titulo">Grupo Alura</h2>
+
       <ul class="rodapé__lista">
         <li class="lista__nome">educação</li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/Caelum.svg" />
+          <img src="assets/Caelum.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Caelum</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/CasaDoCodigo.svg" />
+          <img src="assets/CasaDoCodigo.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Casa do Código</p></a
           >
         </li>
       </ul>
+
       <ul class="rodapé__lista">
         <li class="lista__nome">educação online</li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/Alura.svg" />
+          <img src="assets/Alura.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Alura</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/AluraEmpresas.svg" />
+          <img src="assets/AluraEmpresas.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Alura para Empresas</p></a
           >
         </li>
 
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/AluraLATAM.svg" />
+          <img src="assets/AluraLATAM.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Alura LATAM</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/MusicDot.svg" />
+          <img src="assets/MusicDot.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Alura Start</p></a
           >
         </li>
 
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/AluraLingua.svg" />
+          <img src="assets/AluraLingua.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Alura Língua</p></a
           >
         </li>
 
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/PM3.svg" />
+          <img src="assets/PM3.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">PM3</p></a
           >
         </li>
       </ul>
+
       <ul class="rodapé__lista">
         <li class="lista__nome">comunidade</li>
         <li class="lista__item">
+          <img src="assets/HipstersTech.svg" />
           <a href="#" class="lista__link">
-            <img src="assets/HipstersTech.svg" />
             <p class="lista__link__texto">Hipsters ponto Tech</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/ScubaDev.svg" />
+          <img src="assets/ScubaDev.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Scuba Dev</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/LayersTech.svg" />
+          <img src="assets/LayersTech.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Layers ponto Tech</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/LikeABoss.svg" />
+          <img src="assets/LikeABoss.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Like a Boss</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/CarreiraSemFronteira.svg" />
+          <img src="assets/CarreiraSemFronteira.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Carreira sem Fronteira</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/HipstersJobs.svg" />
+          <img src="assets/HipstersJobs.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">Hipsters ponto Jobs</p></a
           >
         </li>
         <li class="lista__item">
-          <a href="#" class="lista__link"
-            ><img src="assets/GUJ.svg" />
+          <img src="assets/GUJ.svg" />
+          <a href="#" class="lista__link">
             <p class="lista__link__texto">GUJ</p></a
           >
         </li>
